@@ -1,5 +1,8 @@
 Thu Mar 27 17:28:47 1997  Tom Tromey  <tromey@cygnus.com>
 
+	* m4/init.m4: Added optional 3rd argument, which avoids
+	AC_DEFINE.
+
 	* automake.in (scan_one_configure_file): Explicitly avoid
 	INSTALL_SCRIPT to avoid defining it twice.
 
